--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* initial formatting */
+
 body {
     background-color: #F2F2F2;
 }
@@ -25,4 +27,75 @@ h3 {
 
 a, li a {
     color: black;
+}
+
+#header h1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 40px;
+    text-align: center;
+}
+
+/* nav bar */
+#nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0px;
+    gap: 10px;
+}
+
+#nav li {
+    flex-grow: 1;
+    text-align: center;
+}
+
+#nav a {
+    font-family: Verdana, sans-serif;
+    font-size: 14px;
+    font-variant: small-caps;
+    text-decoration: none;
+}
+
+#nav a:hover {
+    background-color: #6bbfa0;
+    color: white;
+    padding: 10px;
+    text-decoration: overline;
+    font-weight: bold;
+}
+
+/* container stuff */
+#container {
+    display: flex;
+    flex-direction: row;
+}
+
+#container #main {
+    flex: 0 1 70%; 
+}
+
+#container #aside {
+    flex: 0 1 30%; 
+}
+
+/* index.html */
+.profile {
+    width: 200px;
+    height: 200px;
+    float: left;
+}
+
+.sm-emphasis {
+    color: #A62D37;
+    font-weight: bold;
+}
+
+.emphasis {
+    display: block;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    background-color: #A62D37;
+    color: white;
+    padding: 10px;
 }
