--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ a, li a {
 #container {
     display: flex;
     flex-direction: row;
+    gap: 15px;
 }
 
 #container #main {
@@ -105,4 +106,60 @@ a, li a {
     width: 70%;
     border: #A62D37 solid 10px;
     border-radius: 10px;
+}
+
+/* resume */
+table {
+    border-collapse: collapse;
+    padding: 5px;
+}
+
+table td{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+    text-align: center;
+    border: #b0b0b0 solid 1px;
+    padding: 5px;
+}
+
+thead {
+    background-color: #6bbfa0;
+    color: white;
+    font-weight: bold;
+}
+
+.speciallink {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+    text-align: center;
+    background-color: #A62D37;
+    color: white;
+    padding: 5px;
+}
+
+#main > div {
+    border: #b0b0b0 solid 2px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px; 
+}
+
+#main > div > h4 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+    text-align: center;
+    background-color: #A62D37;
+    color: white;
+    padding: 5px;
+}
+
+#main > div > h5 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 12px;
+    padding: 5px; 
+}
+
+#main > div > ul {
+    font-family: Verdana, sans-serif;
+    font-size: 14px;
 }
