--- a/styles.css
+++ b/styles.css
@@ -163,3 +163,21 @@ thead {
     font-family: Verdana, sans-serif;
     font-size: 14px;
 }
+
+/* form */
+label {
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    background-color: #6bbfa0;
+    padding: 5px;
+}
+
+#submit-button {
+    font-size: 15px;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #6bbfa0;
+    color: white;
+    border: #6bbfa0 solid 1px;
+    border-radius: 5px;
+    padding: 10px;
+}
